vlib/v/checker/tests/array_voidptr_assign_err.vv
fn main() {
	mut a := []int{}
	a = unsafe { nil }

	// vfmt off
	a = voidptr(0)
}
